--- a/style.css
+++ b/style.css
@@ -5,26 +5,25 @@ body{
 
 #landing{
     height: 100vh;
-    display: flex;
-    align-items: center;
 }
 
 .detail{
     color: white;
-    font-size: clamp(3rem, 8vw, 8rem);
+    font-size: 3rem;
     font-family:'Helvetica', serif;
     text-decoration: none;
 
-    padding: clamp(0.25rem, 0.5vw, 1rem) 0rem;
     display:block;
 
     transition: opacity 600ms ease;
 }
 
 #details {
-    margin-left: clamp(4rem, 18vw, 48rem);
+    margin-left: 6.2vw;
     position:relative;
     z-index: 2;
+    max-width: 6rem;
+    white-space: nowrap;
 }
 
 #details:hover > .detail {
@@ -51,7 +50,7 @@ body{
 
     opacity: 0.15;
 
-    transition: opacity 800ms ease, background-size 800ms ease, background-position 800ms ease;
+    transition: opacity 800ms ease, background-size 1000ms ease, background-position 1000ms ease;
 }
 
 #details:hover ~ #landing-picture {
@@ -64,10 +63,39 @@ body{
 }
 
 #landing[data-activeIndex='1'] > #landing-picture {
+    background-position: 0% 75%;
+}
+
+#landing[data-activeIndex='2'] > #landing-picture {
     background-position: 0% 100%;
 }
 
 #page-about-me {
     display: none;
     color:white;
+}
+
+#name-title {
+    color:white;
+    font-size: clamp(3rem, 8vw, 8rem);
+    font-family:'Helvetica', serif;
+    padding: 0.5vw;
+    display:block;
+
+    padding-top:4vw;
+    padding-left:4vw;
+}
+
+#details:hover > #name-title {
+    opacity:0.3;
+}
+
+#self-desc{
+    color:white;
+    font-size:1.5rem;
+    font-family:'Helvetica', serif;
+    padding:0.5vw;
+    display:block;
+
+    padding-left:5vw;
 }
