removed clamp from title

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
 
 #name-title {
     color:white;
-    font-size: clamp(3rem, 8vw, 8rem);
+    font-size: 4.5vw;
     font-family:'Helvetica', serif;
     padding: 0.5vw;
     display:block;
