--- a/style.css
+++ b/style.css
@@ -98,3 +98,50 @@ body{
 
     padding-left:5vw;
 }
+
+#project-display{
+    color:white;
+    display:flex;
+    gap:2vmin;
+    width: 60vw;
+}
+
+.project-card {
+    width:42vmin;
+    height: 32vmin;
+
+    object-fit: cover;
+    object-position: center;
+
+    margin:0;
+    padding:0;
+}
+
+.project-pic {
+    width:100%;
+    height: 90%;
+
+    object-fit: cover;
+    object-position: center;
+    border-color:goldenrod;
+    border-style: solid;
+}
+
+#project-display > .project-pic {
+    width:20vmin;
+    height: 30vmin;
+
+    object-fit: cover;
+    object-position: center;
+}
+
+#projects-title {
+    color: white;
+    font-size: 3rem;
+    font-family:'Helvetica', serif;
+    text-decoration: none;
+
+    display:block;
+
+    transition: opacity 600ms ease;
+}
